Stream API can be simplified with toList()